# todo_txt_py

./: .gitignore  Makefile  README.md  pyproject.toml  todo.sh  todo.txt
tests/: test_todo_txt.py
todo_txt/: __main__.py  app.py  task.py
todo_txt/Commands/: ICommand.py  ListCommand.py
