[tool.poetry]
name = "todo_txt"
version = "0.1.0"
description = "Minimal/incomplete todo.txt implementation in Python"
authors = ["Ian Barnes <ian@cryptosense.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.22.0"
black = "^20.8b1"
mypy = "^0.812"
flake8 = "^3.9.1"
isort = "^5.8.0"

[tool.poetry.scripts]
todo = "todo_txt.app:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
