[tool.poetry]
name = "todo_txt"
version = "0.1.0"
description = "Minimal/incomplete todo.txt implementation in Python"
authors = ["Ian Barnes <ian@cryptosense.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipython = "^7.29.0"
black = "^21.11b1"
mypy = "^0.910"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.poetry.scripts]
todo = "todo_txt.app:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
